<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.theholywaffle</groupId>
	<artifactId>teamspeak3-api</artifactId>
	<version>1.4.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>TeamSpeak 3 Java API</name>
	<url>https://github.com/TheHolyWaffle/TeamSpeak-3-Java-API</url>
	<description>A Java wrapper of the TeamSpeak 3 Server Query API</description>

	<licenses>
		<license>
			<name>MIT</name>
			<url>http://opensource.org/licenses/MIT</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<email>degeyter.bert@gmail.com</email>
			<name>Bert De geyter</name>
			<url>https://github.com/TheHolyWaffle</url>
			<id>TheHolyWaffle</id>
		</developer>
		<developer>
			<email>rogermarcbaumgartner@hotmail.com</email>
			<name>Roger Baumgartner</name>
			<url>https://github.com/rogermb</url>
			<id>rogermb</id>
			<timezone>+1</timezone>
		</developer>
	</developers>

	<scm>
		<url>scm:git:git@github.com:TheHolyWaffle/TeamSpeak-3-Java-API.git</url>
		<connection>scm:git:git@github.com:TheHolyWaffle/TeamSpeak-3-Java-API.git</connection>
		<developerConnection>scm:git:git@github.com:TheHolyWaffle/TeamSpeak-3-Java-API.git</developerConnection>
	</scm>

	<issueManagement>
		<url>https://github.com/TheHolyWaffle/TeamSpeak-3-Java-API/issues</url>
		<system>GitHub Issues</system>
	</issueManagement>

	<properties>
		<encoding>UTF-8</encoding>
		<sshj.version>0.38.0</sshj.version>
		<slf4j.version>2.0.16</slf4j.version>
		<junit4.version>4.13.2</junit4.version>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.outputTimestamp>2026-03-25T00:00:00Z</project.build.outputTimestamp>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.hierynomus</groupId>
			<artifactId>sshj</artifactId>
			<version>${sshj.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit4.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<excludes>
					<exclude>simplelogger.properties</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Automatic-Module-Name>com.github.theholywaffle.teamspeak3</Automatic-Module-Name>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.2</version>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>ossrh</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<!-- Prevent gpg from using pinentry programs -->
									<gpgArguments>
										<arg>--pinentry-mode</arg>
										<arg>loopback</arg>
									</gpgArguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.8</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>full</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<dependencies>
				<dependency>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-simple</artifactId>
					<version>${slf4j.version}</version>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-shade-plugin</artifactId>
						<version>3.6.0</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>shade</goal>
								</goals>
								<configuration>
									<shadedArtifactAttached>true</shadedArtifactAttached>
									<shadedClassifierName>with-dependencies</shadedClassifierName>
									<transformers>
										<transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
											<resource>simplelogger.properties</resource>
											<file>src/main/resources/simplelogger.properties</file>
										</transformer>
										<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer" />
									</transformers>
									<filters>
										<filter>
											<artifact>org.bouncycastle:*</artifact>
											<excludes>
												<exclude>META-INF/*.*</exclude>
												<exclude>META-INF/versions/9/module-info.class</exclude>
											</excludes>
										</filter>
										<filter>
											<artifact>*:*</artifact>
											<excludes>
												<exclude>META-INF/*.MF</exclude>
											</excludes>
										</filter>
									</filters>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.3.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.11.2</version>
						<configuration>
							<source>21</source>
							<quiet>true</quiet>
							<show>protected</show>
							<linksource>true</linksource>
							<notimestamp>true</notimestamp>
							<bottom>Released under the MIT license.</bottom>
							<tags>
								<tag>
									<name>querycommands</name>
									<placement>m</placement>
									<head>Number of query commands sent:</head>
								</tag>
							</tags>
						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
</project>
